# llm_eval2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: chatlas_query.ipynb  stats_analysis.qmd  stats_analysis.tex  text_analysis.qmd
notebooks/stats_analysis_session/: session_info.txt
notebooks/test/: api_anthropic.ipynb  api_deepseek.ipynb  api_perplexity.ipynb
scripts/: README.md  README_modular.md  data.py  debug_data.py  list_available_models.R  prep_app_data.py  rerun_failed_anthropic.py  run_model_queries.py  run_queries.sh  streamlit_app.py  streamlit_app_modular.py  ui.py  utils.py
scripts/install/: install.R
scripts/test/: debug_data.py
